# hydra

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  lefthook.yaml
.github/workflows/: build.yaml  lint-commit-messages.yaml
scripts/: lint-commit-messages.sh
src/: algebra.rs  core.rs  event.rs  lib.rs  main.rs  store.rs  task.rs
